@@ -21,3 +21,6 @@
 cache).
 9/15 Added calcResidualForces() method equivalent to sdfulltrq(); inverse
 dynamics with constraints.
+9/18 Reworked pos & vel projection to use new operators; fixed pos projection
+so that it produces a normal projection in q-space (was u-space before).
+9/19 Fixed bug 1535 -- mobilizer reaction torque sometimes miscalculated.
